[package]
name = "csvs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert-json-diff = "2.0.2"
async-stream = "0.3.6"
clap = { version = "4.5.19", features = ["derive"] }
futures-core = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.43.0", features = ["full"] }
